--- a/350 - Bilderkennung/VGG16.ipynb
+++ b/350 - Bilderkennung/VGG16.ipynb
@@ -2,53 +2,104 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from keras.preprocessing.image import load_img, img_to_array\n",
-    "\n",
     "from keras.applications.vgg16 import preprocess_input, VGG16, decode_predictions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "image = load_img(\"dog.jpg\", target_size=(224, 224))\n",
-    "image = img_to_array(image)\n",
-    "image = image.reshape((1, 224, 224, 3))\n",
-    "image = preprocess_input(image)"
+    "image = load_img(\"dog.jpg\", target_size=(224, 224)) # Load image with target size\n",
+    "image = img_to_array(image)                         # Convert to array\n",
+    "image = image.reshape((1, 224, 224, 3))             # Reshape data for model\n",
+    "image = preprocess_input(image)                     # Prepare the image (e.g. scale pixel values for the model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load VGG-Model and Prediction for `image` via VGG-Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/vgg16/vgg16_weights_tf_dim_ordering_tf_kernels.h5\n",
+      "\u001b[1m553467096/553467096\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m57s\u001b[0m 0us/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 153ms/step\n"
+     ]
+    }
+   ],
    "source": [
     "model = VGG16()\n",
     "pred = model.predict(image)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Model output"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "flat-coated_retriever (87.40%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "pred.argmax()\n",
+    "label = decode_predictions(pred)\n",
+    "label = label[0][0]\n",
+    "print('%s (%.2f%%)' % (label[1], label[2]*100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/download.tensorflow.org/data/imagenet_class_index.json\n",
+      "\u001b[1m35363/35363\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 1us/step\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[[('n02099267', 'flat-coated_retriever', 0.87402284),\n",
-       "  ('n02099712', 'Labrador_retriever', 0.028977698),\n",
-       "  ('n02105056', 'groenendael', 0.027043305),\n",
-       "  ('n02099429', 'curly-coated_retriever', 0.016472101),\n",
-       "  ('n02097130', 'giant_schnauzer', 0.005894103)]]"
+       "[[('n02099267', 'flat-coated_retriever', 0.8740229),\n",
+       "  ('n02099712', 'Labrador_retriever', 0.0289777),\n",
+       "  ('n02105056', 'groenendael', 0.027043385),\n",
+       "  ('n02099429', 'curly-coated_retriever', 0.016472103),\n",
+       "  ('n02097130', 'giant_schnauzer', 0.0058940984)]]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +118,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ml",
    "language": "python",
    "name": "python3"
   },
@@ -81,7 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
