--- a/350 - Bilderkennung/VGG19.ipynb
+++ b/350 - Bilderkennung/VGG19.ipynb
@@ -4,20 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/jannisseemann/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from keras.preprocessing.image import load_img, img_to_array\n",
-    "\n",
     "from keras.applications.vgg19 import preprocess_input, VGG19, decode_predictions"
    ]
   },
@@ -42,8 +31,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading data from https://github.com/fchollet/deep-learning-models/releases/download/v0.1/vgg19_weights_tf_dim_ordering_tf_kernels.h5\n",
-      "574717952/574710816 [==============================] - 219s 0us/step\n"
+      "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/vgg19/vgg19_weights_tf_dim_ordering_tf_kernels.h5\n",
+      "\u001b[1m574710816/574710816\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m54s\u001b[0m 0us/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 182ms/step\n"
      ]
     }
    ],
@@ -60,11 +50,11 @@
     {
      "data": {
       "text/plain": [
-       "[[('n02099267', 'flat-coated_retriever', 0.81014067),\n",
-       "  ('n02099429', 'curly-coated_retriever', 0.07621509),\n",
-       "  ('n02099712', 'Labrador_retriever', 0.03574164),\n",
-       "  ('n02091831', 'Saluki', 0.011108977),\n",
-       "  ('n02105056', 'groenendael', 0.0076971645)]]"
+       "[[('n02099267', 'flat-coated_retriever', 0.81014043),\n",
+       "  ('n02099429', 'curly-coated_retriever', 0.076215066),\n",
+       "  ('n02099712', 'Labrador_retriever', 0.035741594),\n",
+       "  ('n02091831', 'Saluki', 0.011108973),\n",
+       "  ('n02105056', 'groenendael', 0.007697162)]]"
       ]
      },
      "execution_count": 4,
@@ -86,7 +76,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ml",
    "language": "python",
    "name": "python3"
   },
@@ -100,7 +90,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
