--- a/430 - Word2Vec/Exkurs - One-Hot-Encoding.ipynb
+++ b/430 - Word2Vec/Exkurs - One-Hot-Encoding.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,38 +22,16 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[9, 4, 4, 9, 4, 9, 4, 9]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#from keras.preprocessing.text import one_hot\n",
-    "\n",
-    "#one_hot(sentence, 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "from keras.preprocessing.text import text_to_word_sequence\n",
+    "from tensorflow.keras.preprocessing.text import text_to_word_sequence\n",
     "\n",
     "words = text_to_word_sequence(sentence, lower=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +40,7 @@
        "{'das', 'ein', 'ist', 'satz'}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,15 +51,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'das': 0, 'ein': 1, 'satz': 2, 'ist': 3}\n",
-      "{0: 'das', 1: 'ein', 2: 'satz', 3: 'ist'}\n"
+      "{'ein': 0, 'das': 1, 'satz': 2, 'ist': 3}\n",
+      "{0: 'ein', 1: 'das', 2: 'satz', 3: 'ist'}\n"
      ]
     }
    ],
@@ -99,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,16 +86,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 3, 1, 2, 1, 2, 3, 0]"
+       "[1, 3, 0, 2, 0, 2, 3, 1]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,32 +113,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from keras.utils import to_categorical"
+    "from tensorflow.keras.utils import to_categorical"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1., 0., 0., 0.],\n",
+       "array([[0., 1., 0., 0.],\n",
        "       [0., 0., 0., 1.],\n",
-       "       [0., 1., 0., 0.],\n",
+       "       [1., 0., 0., 0.],\n",
        "       [0., 0., 1., 0.],\n",
-       "       [0., 1., 0., 0.],\n",
+       "       [1., 0., 0., 0.],\n",
        "       [0., 0., 1., 0.],\n",
        "       [0., 0., 0., 1.],\n",
-       "       [1., 0., 0., 0.]], dtype=float32)"
+       "       [0., 1., 0., 0.]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +157,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ml",
    "language": "python",
    "name": "python3"
   },
@@ -193,7 +171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
