--- a/440 - Embedding/Download der Modelle + Aufgabe.ipynb
+++ b/440 - Embedding/Download der Modelle + Aufgabe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -13,14 +13,23 @@
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/by/l34wfpgn2v11pqz8wlmb4v080000gn/T/ipykernel_64193/3279770517.py:24: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
+      "  for data in tqdm(r.iter_content(block_size), total=math.ceil(total_size//block_size), unit='KB', unit_divisor=1024, unit_scale=True):\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a33f7bd4630f44edbd15194662c1fb36",
+       "model_id": "32f53c6a38f44372b18957e4f16fd2b4",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=108752), HTML(value='')))"
+       "  0%|          | 0.00/106k [00:00<?, ?KB/s]"
       ]
      },
      "metadata": {},
@@ -30,7 +39,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
       "Done: faust.model\n",
       "Downloading 5.5026397705078125 MB.\n"
      ]
@@ -38,12 +46,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5f6b14dee0bc4b37bd3477a028477fe6",
+       "model_id": "8e5cdfaba604457099dbde90f7c72244",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=5634), HTML(value='')))"
+       "  0%|          | 0.00/5.50k [00:00<?, ?KB/s]"
       ]
      },
      "metadata": {},
@@ -53,7 +61,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
       "Done: verwandlung.model\n"
      ]
     }
@@ -76,7 +83,7 @@
     "        r = requests.get(remote, stream=True)\n",
     "\n",
     "        # Total size in bytes.\n",
-    "        total_size = int(r.headers.get('content-length', 0));\n",
+    "        total_size = int(r.headers.get('content-length', 0))\n",
     "\n",
     "        print(\"Downloading \" + str(total_size / 1024 / 1024) + \" MB.\")\n",
     "\n",
@@ -117,7 +124,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ml",
    "language": "python",
    "name": "python3"
   },
@@ -131,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
